Fix notifications and add auto mark unseen=false when open modal and delete all button Add js dateformat to print error in console if date is unreadable

--- a/app/src/scss/_modal.scss
+++ b/app/src/scss/_modal.scss
@@ -26,6 +26,13 @@ body.modal-open {
   overflow-x: hidden;
   overflow-y: scroll;
   outline: 0;
+
+  .buttons-container {
+    display: flex;
+    justify-content: end;
+    gap: $padding-unit-big;
+  }
+
 }
 
 .modal > div:first-child {
